Setup project and app

--- a/.netrc
+++ b/.netrc
@@ -1,4 +1,6 @@
 machine github.com
 login ankitb1227
 password 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
+<Escape>:w<Escape>:wyudfgjyukhu;
 
+zsh:1: permission denied: ../profiles-rest-api/
