--- a/.gitignore
+++ b/.gitignore
@@ -126,6 +126,7 @@ dmypy.json
 ### Vagrant ###
 # General
 .vagrant/
+.ssh/
 
 # Log files (if you are creating logs in debug mode, uncomment this)
 # *.logs
